# Botkit

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: build.yml  docs.yml  publish.yml
api/: get_data.py  test.py
api/bot_api_schema/: __init__.py  bot_api_schema.json
assets/: GitHub Social Logo Draft.xcf
botkit/: __init__.py  _settings.py  botkit_context.py  buttons.py  settings.py
botkit/abstractions/: __init__.py  _asyncloadunload.py  _named.py  _registerable.py
botkit/agnostic/: __init__.py  _pyrogram_update_type_inference.py  annotations.py  library_checks.py  pyrogram_chat_resolver.py  pyrogram_view_sender.py  resolvers.py
botkit/agnostic/pyrogram_impl/: _pyrogram_update_type_inference.py
botkit/botkit_modules/module_manager/: __init__.py  paged_module_view.py  view_models.py
botkit/botkit_modules/system/: status_pings.py  system_tests.py  sytem_management_module.py
botkit/botkit_services/: lookupservice.py  services.py
botkit/botkit_services/bettermarkdown/: bettermarkdown.py  bettermarkdown_old.py  bettermarkdownlexer.py  markdownservice.py
botkit/botkit_services/botautomation/: base.py  idletownbot.py  stickerfinderbot.py  stickeroptimizerbot.py  stickersbot.py  toolkitbot.py  workingdictbot.py
botkit/botkit_services/eventing/: botkit_event_bus.py
botkit/botkit_services/nlu/: dialogflowconfig.py  nluservice.py
botkit/botkit_services/sr/: speechrecognition.py
botkit/builders/: __init__.py  callbackbuilder.py  htmlbuilder.py  inlinemenubuilder.py  menubuilder.py  metabuilder.py  quizbuilder.py  replymarkupbuilder.py  viewbuilder.py
botkit/builders/text/: basetextbuilder.py  emoji.py  htmltextbuilder.py  iconographybuilder.py  mdformat.py  telegram_entity_builder.py  typographybuilder.py
botkit/builtin_modules/module_manager/: __init__.py  paged_module_view.py  pagination_model.py  view_models.py
botkit/builtin_modules/system/: status_pings.py  system_tests.py  sytem_management_module.py
botkit/builtin_services/: lookupservice.py
botkit/builtin_services/bettermarkdown/: aliases.py  bettermarkdown.py  bettermarkdown_old.py  markdownservice.py
botkit/builtin_services/botautomation/: base.py  idletownbot.py  stickerfinderbot.py  stickersbot.py  toolkitbot.py  workingdictbot.py
botkit/builtin_services/eventing/: __init__.py  botkit_event_bus.py
botkit/builtin_services/nlu/: dialogflowconfig.py  messageunderstanding.py  nluservice.py
botkit/builtin_services/options/: base.py
botkit/builtin_services/sr/: speechrecognition.py
botkit/clients/: client.py  client_config.py  configured_client.py
botkit/commands/: TODO.md  command.py
botkit/components/: questionnaire.py
botkit/configuration/: __init__.py  client_config.py
botkit/core/: components.py  hmr.py  module_activator.py  moduleloader.py  startup.py
botkit/core/modules/: __init__.py  _di.py  _module.py  _moduledecorator.py  _registration.py  hmr.py  module_activator.py  module_loader.py
botkit/core/services/: __init__.py  _base.py  _decorator.py  _decorator.pyi
botkit/dispatching/: callbackqueryactiondispatcher.py  deeplinkstartactiondispatcher.py  dispatcher.py  scopes.py  types.py  update_field_extractor.py
botkit/dispatching/callbackqueries/: callbackactiondispatcher.py  types.py
botkit/future_tgtypes/: chat.py  chat_descriptor.py  chat_identity.py  message.py  message_descriptor.py  message_identity.py  primitives.py  update_field_extractor.py  user.py
botkit/future_tgtypes/descriptors/: base.py  chat_descriptor.py
botkit/future_tgtypes/identities/: chat_identity.py  message_identity.py
botkit/future_tgtypes/persistence/: textmessagemodel.py
botkit/inlinequeries/: contexts.py  inlineresultcontainer.py  inlineresultgenerator.py  resultaggregator.py
botkit/libraries/: __init__.py  _checks.py  annotations.py
botkit/libraries/pyro_types/: _pyrogram_update_type_inference.py
botkit/models/: __init__.py  _interfaces.py  _statemodel.py
botkit/persistence/callback_store/: _base.py  (+4 more)
botkit/routing/: route.py  triggers.py  types.py  user_error.py
botkit/services/: backgroundworker.py  companionbotservice.py  historyservice.py
botkit/testing/: module_test_factory.py
botkit/tghelpers/: direct_links.py  names.py
botkit/types/: client.py  helpers.py
botkit/utils/: __init__.py  async_lazy_dict.py  cached_property.py  dataclass_helpers.py  datetime_utils.py  decorators.py  easy_expressions.py  legacy.py  nameof.py  paraminjection.py  scheduling.py  sentinel.py  strutils.py  timer.py  tracing.py  typed_callable.py
botkit/views/: base.py  botkit_context.py  functional_views.py  rendered_messages.py  renderer_client_mixin.py  sender_interface.py  success_view.py  types.py  view_state_model.py  views.py
botkit/widgets/: DESIGN.md  WIDGET-IDEAS.md  __init__.py
cli/: main.py
docs/: Conversational UI.md  Injector Library Questions.md  Makefile  TODO.md  conf.py  index.rst
tests/: config.py  conftest.py
tests/builders/: test_inlinemenubuilder.py  test_menubuilder.py
tests/commands/: test_command.py
tests/configuration/: client_config_test_data.py  test_client_config.py
tests/docker/: DOCKERFILE  pyproject.toml  test_docker.py
tests/inlinequeries/: test_prefixbasedinlinequeryhandler.py
tests/logging/: test_logging.py
tests/module_tests/: test_func_module.py
tests/persistence/: test_callback_stores.py
tests/routing/: test_publish_expression.py  test_routing.py  test_state_machines.py
tests/utils/: test_easy_expressions.py  test_paraminjection.py  test_typed_callables.py  typed_callable_tests.py
tests/views/: test_functional_views.py  test_simple_message_view.py  test_typical_inline_message_view.py  test_view_validation.py
typings/asynctest/: __init__.pyi  _fail_on.pyi  case.pyi  helpers.pyi  mock.pyi  selector.pyi
typings/boltons/: iterutils.pyi
typings/cached_property/: __init__.pyi
typings/decorators/: __init__.pyi
typings/haps/: __init__.pyi  application.pyi  config.pyi  container.pyi  exceptions.pyi
typings/typing/: __init__.pyi
(+125 files in other folders)
