[tool.poetry]
name = "autogram-botkit"
packages = [
    { include = "botkit" }
]
version = "0.2.1"
description = "Opinionated, library-agnostic Python framework for rapid development of Telegram (user)bots with focus on maintainability for large projects."
license = "GPL-3.0-or-later"
authors = ["JosXa <joscha.goetzer@gmail.com>"]
readme = "README.md"
repository="https://github.com/autogram/Botkit"
keywords = ["telegram-bots", "telegram-userbots", "python3", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/autogram/Botkit/issues"
"Support Chat" = "https://t.me/BotkitChat"
"News & Updates" = "https://t.me/AUTOBotkit"
"Contact Author" = "https:/t.me/JosXa"

[tool.poetry.dependencies]
python = "^3.8"
cached_property = "^1.5.1"
buslane = "^0.0.u"
python-decouple = "3.3"
logzero = "^.5.0"
more-itertools = "^8.2.0"
unsync = "^1.2.1"
haps = "^1.1.2"
typing-inspect = ">=0.5.0"
pydantic = {extras = ["dotenv"], version = "^1.4"}
ordered_set = "^3.1.1"
decorators = "^0.1.1"
pyhumps = "^1.3.1"
boltons = "*"
pytz = "2020.1"
redis-collections = { version = "^0.8.1", optional = true }
watchgod = { version = "^0.6", optional = true }

[tool.poetry.extras]
redis = ["redis-collections"]
hmr = ["watchgod"]

[tool.poetry.dev-dependencies]
black = {version = ">=20.8b1", python = "^3.8", markers = "platform_python_implementation == 'CPython'"}
mypy = ">0.770"
birdseye = "^0.8.3"
mkinit = "^0.2.0"
typer = "^0.3.1"
pytest = "^6.0.1"
pytest-asyncio = "^0.14.0"
pyrogram = "1.*"
pytest-cov = "^2.10.1"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
